feat: 옷 속성 정의 조회 기능 및 관련 서비스 구현